--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -81,7 +81,7 @@
                   <button type="submit" [disabled]="loading" class="btn btn-primary m-0">
                     @if (loading) {
                       <span class="loading">
-                        <i class="ri-loader-2-fill fs-16"></i>
+                        <i class="bi-arrow-repeat fs-16"></i>
                       </span>
                     }
                     {{ 'Login' | translate }}
