--- a/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
+++ b/src/app/modules/landing-page/sections/section-contact-us/section-contact-us.component.html
@@ -53,17 +53,17 @@
             <div class="p-3">
               <div class="fs-18 text-primary fw-medium mb-3">Contact Information</div>
               <div class="mb-3">
-                <i class="ri-map-pin-fill me-2 text-primary"></i>
+                <i class="bi-geo-alt-fill me-2 text-primary"></i>
                 1352/A-12, Kepston Street, Keppy Town, Xorazmston.
               </div>
               <div class="d-flex mb-3">
-                <i class="ri-phone-fill me-2 d-inline-block text-primary"></i>
+                <i class="bi-telephone-fill me-2 d-inline-block text-primary"></i>
                 <div>
                   <div>+998 90 558-17-75</div>
                 </div>
               </div>
               <div class="mb-4">
-                <i class="ri-mail-fill me-2 d-inline-block text-primary"></i>
+                <i class="bi-envelope-fill me-2 d-inline-block text-primary"></i>
                 nazarbek.baltabaev&#64;gmail.com
               </div>
             </div>
