--- a/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
+++ b/src/app/modules/landing-page/sections/section-faq/section-faq.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="row justify-content-center align-items-center">
     <div class="col-xl-4">
-      <i class="ri-question-line op-2 faq-icon align-middle lh-1"></i>
+      <i class="bi-question op-2 faq-icon align-middle lh-1"></i>
     </div>
     <div class="col-xl-8 text-start">
       <div ngbAccordion class="accordion accordion-customicon1 accordion-primary accordions-items-seperate">
