--- a/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
+++ b/src/app/modules/landing-page/sections/section-reviews/section-reviews.component.html
@@ -25,7 +25,7 @@
               <kep-card customClass="text-fixed-white" [cardHeight]="'230px'">
                 <div class="card-body">
                   <div>
-                    <i class="ri-double-quotes-l text-primary fs-2"></i>
+                    <i class="bi-quote text-primary fs-2"></i>
                     <div class="op-9 fs-14 mb-3">
                       {{ review.text }}
                     </div>
@@ -34,11 +34,11 @@
                     <div>
                       <div class="d-flex align-items-center">
                         <span class="text-warning d-block me-1">
-                          <i class="ri-star-fill fs-14 align-middle lh-1"></i>
-                          <i class="ri-star-fill fs-14 align-middle lh-1"></i>
-                          <i class="ri-star-fill fs-14 align-middle lh-1"></i>
-                          <i class="ri-star-fill fs-14 align-middle lh-1"></i>
-                          <i class="ri-star-fill fs-14 align-middle lh-1"></i>
+                          <i class="bi-star-fill fs-14 align-middle lh-1"></i>
+                          <i class="bi-star-fill fs-14 align-middle lh-1"></i>
+                          <i class="bi-star-fill fs-14 align-middle lh-1"></i>
+                          <i class="bi-star-fill fs-14 align-middle lh-1"></i>
+                          <i class="bi-star-fill fs-14 align-middle lh-1"></i>
                         </span>
                         <span class="op-8">5.0</span>
                       </div>
