--- a/src/app/modules/error/error404/error404.component.html
+++ b/src/app/modules/error/error404/error404.component.html
@@ -5,12 +5,12 @@
       <div class="my-auto">
         <div class="row align-items-center justify-content-center h-100 text-center">
           <div class="col-xl-5">
-            <p class="error-text mb-4 text-primary">4<i class="ri-emotion-sad-line"></i>4</p>
+            <p class="error-text mb-4 text-primary">4<i class="bi-emoji-frown"></i>4</p>
             <p class="fs-3 fw-normal mb-3 text-fixed-white">Oops! Page Not Found.</p>
             <p class="fs-15 text-fixed-white mb-5 op-8">The page you are attempting to access may have been removed or
               is temporarily unavailable.</p>
             <a [routerLink]="['']" class="btn btn-primary-ghost"><i
-              class="ri-arrow-left-line align-middle me-1 d-inline-block"></i>BACK TO HOME</a>
+              class="bi-arrow-left align-middle me-1 d-inline-block"></i>BACK TO HOME</a>
           </div>
         </div>
       </div>
