--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@
 }
 
 @import 'assets/scss/styles';
-@import 'assets/scss/icons';
+@import url("assets/icon-fonts/feather/feather.css");
+@import url("assets/icon-fonts/bootstrap-icons/icons/font/bootstrap-icons.css");
 @import "../node_modules/@ng-select/ng-select/themes/default.theme.css";
 @import url('highlight.js/styles/vs2015.css');
 @import "../node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
