refactoring after upgrading to Angular 19

--- a/src/app/modules/users/pages/user-profile/user-blog/user-blog.component.html
+++ b/src/app/modules/users/pages/user-profile/user-blog/user-blog.component.html
@@ -4,6 +4,6 @@
   </div>
 } @else {
   @for (blog of userBlog; track blog.id) {
-    <blog-post-card [blog]="blog" [cardImgHeight]="350"></blog-post-card>
+    <blog-post-card [blog]="blog" [cardImgHeight]="350"/>
   }
 }
