--- a/src/app/modules/home/posts-section/posts-section.component.html
+++ b/src/app/modules/home/posts-section/posts-section.component.html
@@ -9,7 +9,7 @@
         <div class="swiper pagination-dynamic testimonialSwiperService">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <blog-post-card [blog]="post"></blog-post-card>
+              <blog-post-card [blog]="post"/>
             </div>
           </div>
           <div
