--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,11 +61,11 @@
 @import 'primeng/resources/primeng.css';
 @import 'styles/primeng-sass/themes/aura/aura-dark/primary/theme';
 
-html:has(.swal2-container) {
-  app-footer {
-    display: none !important;
-  }
-}
+//html:has(.swal2-container) {
+//  app-footer {
+//    display: none !important;
+//  }
+//}
 
 .text-white {
   color: white !important;
