--- a/src/app/modules/duels/pages/duel/duel.component.html
+++ b/src/app/modules/duels/pages/duel/duel.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
-    @if (isLoading) {
+    @if (!data) {
       <div class="row">
         <div class="col-lg-9 col-12">
           <ngx-skeleton-loader
