tiny change | duel

--- a/src/app/modules/duels/pages/duel/duel.component.html
+++ b/src/app/modules/duels/pages/duel/duel.component.html
@@ -119,7 +119,7 @@
             </kep-card>
           }
 
-          @if (attempts) {
+          @if (attempts?.length > 0) {
             <h5>
               {{ 'Attempts' | translate }}
             </h5>
