--- a/src/app/modules/users/pages/user-profile/user-info/user-info.component.html
+++ b/src/app/modules/users/pages/user-profile/user-info/user-info.component.html
@@ -25,7 +25,7 @@
           <span class="me-1 fi fi-{{ userInfo.country }}"></span>
           {{ userInfo.country | countryName }}
           @if (userInfo.region) {
-            <span>, {{ userInfo.region }}</span>
+            <span>- {{ userInfo.region }}</span>
           }</p>
       </div>
     }
