--- a/src/app/modules/users/pages/user-profile/user-skills/user-skills.component.html
+++ b/src/app/modules/users/pages/user-profile/user-skills/user-skills.component.html
@@ -34,13 +34,9 @@
         <i data-feather="slack"></i>
         {{ 'USER_INFO.TECHNOLOGIES' | translate }}
       </h4>
-      <div class="user-technologies mt-2">
+      <div class="user-technologies mt-2 d-flex gap-1" style="flex-wrap: wrap;">
         @for (technology of userTechnologies; track technology) {
-          <span
-            [style.background]="technology.badgeColor"
-            [style.box-shadow]="'0px 0px 10px' + technology.badgeColor"
-            class="badge"
-          >
+          <span [style.background]="technology.badgeColor" class="badge">
             <i class="{{ technology.devIconClass }} "></i>
             {{ technology.text }}
           </span>
