--- a/src/app/modules/users/pages/user-profile/user-achievements/achievement/achievement.component.html
+++ b/src/app/modules/users/pages/user-profile/user-achievements/achievement/achievement.component.html
@@ -9,7 +9,7 @@
   [ngbTooltip]="achievement.description">
   <div class="achievement-icon">
     @if (achievement.type == 1) {
-      <div class="avatar p-50 bg-primary badge-glow">
+      <div class="avatar p-50 bg-primary">
         <div class="avatar-content">
           <i [data-feather]="'problem' | iconName" [size]="20"></i>
         </div>
@@ -29,7 +29,7 @@
     }
 
     @if (achievement.type == 4) {
-      <div class="avatar p-50 bg-warning badge-glow">
+      <div class="avatar p-50 bg-warning">
         <img height="36" src="assets/images/icons/versus.png" alt="vs">
         <div class="achievement-pill badge badge-pill bg-warning">
           {{ achievement.totalProgress }}
@@ -38,7 +38,7 @@
     }
 
     @if (achievement.type == 5) {
-      <div class="avatar p-50 bg-dark badge-glow">
+      <div class="avatar p-50 bg-dark">
         <div class="avatar-content">
           <i [data-feather]="'flag'" [size]="20"></i>
         </div>
