--- a/src/app/modules/challenges/pages/challenges/sections/section-top-rating/section-top-rating.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-top-rating/section-top-rating.component.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="card-footer text-center">
-      <a routerLink="rating" class="btn btn-block btn-primary" [ngClass.lt-md]="'btn-sm'">
+      <a routerLink="rating" class="btn full-width btn-primary" [ngClass.lt-md]="'btn-sm'">
         <kep-icon name="ranking"></kep-icon>
         {{ 'OverallRating' | translate }}
       </a>
