--- a/src/app/modules/courses/pages/course/course-info/course-info.component.html
+++ b/src/app/modules/courses/pages/course/course-info/course-info.component.html
@@ -27,7 +27,7 @@
           <div class="text-center">
             <a
               [routerLink]="Resources.CourseFirstLesson | resourceById:course.id"
-              class="btn btn-primary btn-sm btn-block" rippleEffect>
+              class="btn btn-primary btn-sm full-width" rippleEffect>
               <span>
                 @if (!course.isStarted) {
                   {{ 'COURSES.START' | translate }}
