--- a/src/app/modules/testing/pages/test-pass/test-pass.component.html
+++ b/src/app/modules/testing/pages/test-pass/test-pass.component.html
@@ -257,7 +257,7 @@
       </div>
 
       <div class="card-footer text-center">
-        <button (click)="testPassFinish()" class="btn btn-block btn-sm btn-primary">
+        <button (click)="testPassFinish()" class="btn full-width btn-sm btn-primary">
           {{ 'FinishTest' | translate }}
         </button>
       </div>
