--- a/src/app/modules/auth/auth-modal/auth-modal.component.html
+++ b/src/app/modules/auth/auth-modal/auth-modal.component.html
@@ -18,7 +18,7 @@
              formControlName="password"/>
     </div>
     <div class="modal-footer">
-      <button type="submit" [disabled]="loginForm.invalid" class="btn btn-block btn-primary" rippleEffect>
+      <button type="submit" [disabled]="loginForm.invalid" class="btn full-width btn-primary" rippleEffect>
         {{ 'Login' | translate }}
       </button>
     </div>
