--- a/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
+++ b/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
@@ -48,7 +48,7 @@
       <div class="col-6 col-lg-3 d-flex align-items-center">
         <button
           (click)="myAttemptsClick()"
-          class="btn btn-block mt-2 py-75 btn-sm btn-primary">
+          class="btn full-width mt-2 py-75 btn-sm btn-primary">
           {{ 'MY_ATTEMPTS' | translate }}
         </button>
       </div>
