--- a/src/app/modules/problems/pages/problems/sections/section-last-attempts/section-last-attempts.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-last-attempts/section-last-attempts.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="card-footer">
-      <a [routerLink]="Resources.Attempts" class="btn btn-block btn-primary btn-sm">
+      <a [routerLink]="Resources.Attempts" class="btn full-width btn-primary btn-sm">
         <kep-icon class="font-medium-1" name="attempt"></kep-icon>
         {{ 'AllAttempts' | translate }}
       </a>
