--- a/src/app/modules/problems/pages/problems/sections/section-last-contest-problems/section-last-contest-problems.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-last-contest-problems/section-last-contest-problems.component.html
@@ -1,4 +1,4 @@
-<kep-card class="card">
+<kep-card>
   @if (isLoading) {
     <div class="card-body" [style.height.px]="550">
       <spinner></spinner>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="card-footer">
-      <a [routerLink]="Resources.Contest | resourceById : contest.id" class="btn btn-block btn-primary btn-sm">
+      <a [routerLink]="Resources.Contest | resourceById : contest.id" class="btn full-width btn-primary btn-sm">
         <kep-icon class="font-medium-1" name="contest"></kep-icon>
         {{ 'GoToContest' | translate }}
       </a>
