--- a/src/app/modules/problems/pages/problems/sections/section-most-viewed-problems/section-most-viewed-problems.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-most-viewed-problems/section-most-viewed-problems.component.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div class="card-footer">
-      <button class="btn btn-block btn-success btn-sm" (click)="pickOne()">
+      <button class="btn full-width btn-success btn-sm" (click)="pickOne()">
         <kep-icon class="font-medium-1" name="click"></kep-icon>
         {{ 'PickOne' | translate }}
       </button>
