--- a/src/app/modules/home/posts-section/posts-section.component.html
+++ b/src/app/modules/home/posts-section/posts-section.component.html
@@ -6,7 +6,7 @@
   <owl-carousel-o [options]="customOptions">
     @for (post of lastPosts; track post) {
       <ng-template carouselSlide>
-        <div class="swiper pagination-dynamic testimonialSwiperService">
+        <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <blog-post-card [blog]="post"/>
