--- a/src/app/styles/vuexy-extended.scss
+++ b/src/app/styles/vuexy-extended.scss
@@ -1,7 +1,7 @@
 @import 'vuexy-extended/apex-chart';
 @import 'vuexy-extended/badge';
 @import 'vuexy-extended/beautiful-table';
-// @import 'vuexy-extended/content';
+@import 'vuexy-extended/content';
 // @import 'vuexy-extended/dark-layout';
 @import 'vuexy-extended/forms';
 @import 'vuexy-extended/hljs';
